<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".items.BuyItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--TOP TOOL BAR-->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/topBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="?attr/colorPrimaryDark"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

            <Button
                android:id="@+id/back_button"
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:background="@drawable/ic_arrow_back_white_24dp"
                android:onClick="onBackButtonBuyItem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topBar">

            <ScrollView
                android:id="@+id/scrollViewBuy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/item_image"
                        android:layout_width="274dp"
                        android:layout_height="173dp"
                        android:layout_marginTop="72dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/item_potion"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center_horizontal"
                        android:text="Hello"
                        android:textColor="?attr/colorContrasted"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item_image"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/unit_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="TextView"
                        android:textColor="?attr/colorContrasted"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item_description"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/coin_2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintStart_toEndOf="@+id/unit_price"
                        app:layout_constraintTop_toTopOf="@+id/unit_price"
                        app:srcCompat="@drawable/gold_coin"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        android:textColor="?attr/colorContrasted"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/unit_price"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/coin_"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintStart_toEndOf="@+id/total_price"
                        app:layout_constraintTop_toBottomOf="@+id/unit_price"
                        app:srcCompat="@drawable/gold_coin"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/player_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="24dp"
                        android:textColor="?attr/colorContrasted"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/total_price"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/coin_3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintStart_toEndOf="@+id/player_currency"
                        app:layout_constraintTop_toBottomOf="@+id/total_price"
                        app:srcCompat="@drawable/gold_coin"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/player_item_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="?attr/colorContrasted"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/player_currency"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/counter"
                        android:layout_width="83dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="?attr/colorContrasted"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/plus_button"
                        app:layout_constraintStart_toEndOf="@+id/minus_button"
                        app:layout_constraintTop_toBottomOf="@+id/player_item_num"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:id="@+id/minus_button"
                        android:layout_width="88dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/list_view_shape"
                        android:backgroundTint="?attr/colorProgression"
                        android:gravity="center"
                        android:onClick="onMinusButton"
                        android:text="-"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/counter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/counter"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:id="@+id/plus_button"
                        android:layout_width="88dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/list_view_shape"
                        android:backgroundTint="?attr/colorProgression"
                        android:gravity="center"
                        android:onClick="onPlusButton"
                        android:text="+"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/counter"
                        app:layout_constraintTop_toTopOf="@+id/counter"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:id="@+id/buy_button"
                        android:layout_width="166dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="onBuyButton"
                        android:text="@string/buy"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/list_view_shape"
                        android:backgroundTint="?attr/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/counter"
                        app:layout_constraintVertical_bias="0.4"
                        tools:layout_width="166dp" />

                </android.support.constraint.ConstraintLayout>

            </ScrollView>

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>