...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topBar">

            <ListView
                android:id="@+id/list_view_shop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
...
